[project]
name = "water-agi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asyncio>=3.4.3",
    "gridstatus>=0.30.1",
    "httpx>=0.28.1",
    "matplotlib>=3.10.3",
    "mcp[cli]>=1.9.4",
    "pandas>=2.3.0",
    "pydantic-ai>=0.3.1",
    "python-dotenv>=1.1.0",
    "scikit-learn>=1.7.0",
]
